# gaatha-salesforce

./: .dockerignore  .env copy  .gitignore  Dockerfile  README.md  compose.yaml  config_prod.toml  main.py  pyproject.toml  yoyo.ini
.devcontainer/: devcontainer.json
.github/workflows/: cd.yml  ci.yml
api/: app.py  database.py  lifespan.py  logging.py  main.py  middleware.py  migrations.py  sentry.py
api/agent/: __init__.py  memory.py  orchestrator.py  prompts.py  router.py  schema.py  state.py
api/controller/: agent.py  area.py  auth.py  brand.py  brand_category.py  company.py  distributor.py  order.py  product.py  retailer.py  role.py  route.py  route_assignment.py  route_log.py  shop_category.py  user.py
api/dependencies/: __init__.py  area.py  auth.py  brand.py  brand_category.py  common.py  company.py  distributor.py  order.py  product.py  retailer.py  role.py  route.py  route_assignment.py  route_log.py  shop_category.py  user.py
api/exceptions/: __init__.py  app.py  area.py  areas.py  brand.py  brand_category.py  company.py  distributor.py  handler.py  order.py  product.py  retailer.py  role.py  roles.py  route.py  route_assignment.py  route_log.py  shop_category.py  user.py  users.py
api/models/: __init__.py  agent.py  area.py  areas.py  auth.py  base.py  brand.py  brand_category.py  company.py  distributor.py  docuemnts.py  errors.py  margins.py  orders.py  product.py  retailer.py  role.py  roles.py  (+6 more)
migrations/: 20251218_01_x8Zu7.sql  20251218_02_uWFbU.sql  20251218_03_jr2WV.sql  20251218_04_90nJl.sql  20251225_01_ZaTWt.sql  20260110_01_h7Tih.sql
(+80 files in other folders)
